[project]
name = "kyounoryouri-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.404",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
include = ["kyounoryouri_tools"]
typeCheckingMode = "standard"
reportInvalidStringEscapeSequence = "none"
