[project]
name = "kyounoryouri_tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "natsort>=8.4.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "typer>=0.16.1",
    "types-beautifulsoup4>=4.12.0.20250516",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
include = ["src/kyounoryouri_tools"]
typeCheckingMode = "standard"
reportInvalidStringEscapeSequence = "none"

[project.scripts]
kyounoryouri-tools = "kyounoryouri_tools.cli:main"
